# smart-account-demo

./: Cargo.toml
SmartAccountDemo/: Package.swift
SmartAccountDemo/.swiftpm/xcode/xcuserdata/stefano.xcuserdatad/xcschemes/: xcschememanagement.plist
SmartAccountDemo/RustFramework.xcframework/: Info.plist
SmartAccountDemo/RustFramework.xcframework/ios-arm64/Headers/: module.modulemap  smart_account_demoFFI.h
SmartAccountDemo/Sources/SmartAccountDemo/: smart_account_demo.swift
src/: lib.rs  lib.udl
