[package]
name = "smart-account-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]
name = "smart_account_demo"

[dependencies]
uniffi = { version = "0.27", features = ["tokio"] }
aa-sdk-rs = { git = "https://github.com/bejitono/aa-sdk-rs.git", branch = "safe-account" }
ethers = "2.0.2"
tokio = { version = "1.37", features = ["full", "test-util"] }
eyre = "0.6.8"

# remove:
url = "2.1"

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }